# NDArray

./: NDArray.cabal  NDArray.leo  Setup.hs
sources/Data/: NDArray.hs
sources/Data/NDArray/: Classes.hs  Cuts.hs  Descriptor.hs  Indexable.hs  Listlike.hs  Mutable.hs  Queryable.hs
tests/: test.hs
